Notifications and route guarde implemented

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
             placeholder="Login"> <br>
         <input name="password" [(ngModel)]="model.password" type="password" style="width: 250px; margin-bottom: 20px;"
             placeholder="Password"> <br>
-        <button class="btn btn-outline-info"
+        <button class="btn btn-info"
             style="background-color: lightseagreen; border-color: lightseagreen; color: white;" type="submit">Log
             in</button>
         <h4 class="mt-5">New member?</h4>
-        <button class="btn btn-outline-info mt-3" (click)="register()"
+        <button class="btn btn-info mt-3" (click)="register()"
             style="background-color: lightseagreen; border-color: lightseagreen; color: white;">Sign up now</button>
     </form>
 </div>
