--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,11 +6,11 @@
             placeholder="Password"> <br>
         <input name="email" type="email" style="width: 250px; margin-bottom: 20px;" placeholder="Email"> <br>
         <input name="Birth date" type="date" style="width: 250px; margin-bottom: 20px;" placeholder="Birth date"> <br>
-        <button class="btn btn-outline-info"
+        <button class="btn btn-info"
             style="background-color: lightseagreen; border-color: lightseagreen; color: white;"
             type="submit">Register</button>
         <h4 class="mt-5">Already have an account?</h4>
-        <button class="btn btn-outline-info mt-3" (click)="login()"
+        <button class="btn btn-info mt-3" (click)="login()"
             style="background-color: lightseagreen; border-color: lightseagreen; color: white;">Log in now</button>
     </form>
 </div>
