--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,21 +1,31 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: lightseagreen;">
     <div class="container">
-        <a class="navbar-brand" style="font-size: xx-large;">BookShelf</a>
+        <a class="navbar-brand" routerLink="/" style="font-size: xx-large;">BookShelf</a>
         <div class="collapse navbar-collapse" *ngIf="accountService.currentUser$ | async">
             <form class="d-flex" role="search">
-                <input class="form-control me-2" style="width: 300px; margin: 0 auto;" placeholder="SEARCH" type="search" aria-label="Search">
-                <button class="btn btn-outline-info" style="border-color: white; color: white;" type="submit">SEARCH</button>
+                <input class="form-control me-2" style="width: 300px; margin: 0 auto;" placeholder="SEARCH"
+                    type="search" aria-label="Search">
+                <button class="btn btn-outline-info" style="border-color: white; color: white;"
+                    type="submit">SEARCH</button>
             </form>
         </div>
 
-        <a class="navbar-brand" *ngIf="accountService.currentUser$ | async"><i class="bi bi-bookmark-heart me-2" style="font-size: xx-large;"></i></a>
+        <a class="routerLink me-3" routerLink="/liked" routerLinkActive="active"
+            *ngIf="accountService.currentUser$ | async"><i class="bi bi-bookmark-heart me-2"
+                style="font-size: xx-large; color: white;"></i></a>
+        <a class="routerLink me-3" routerLink="/toread" routerLinkActive="active"
+            *ngIf="accountService.currentUser$ | async"><i class="bi bi-bookmark-star me-2"
+                style="font-size: xx-large; color: white;"></i></a>
+        <a class="routerLink me-3" routerLink="/finished" routerLinkActive="active"
+            *ngIf="accountService.currentUser$ | async"><i class="bi bi-bookmark-check me-2"
+                style="font-size: xx-large; color: white;"></i></a>
 
         <div class="dropdown" dropdown *ngIf="accountService.currentUser$ | async">
             <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>
                 <i class="bi bi-person-circle" style="font-size: xx-large;"></i>
             </a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
-                <a class="dropdown-item">Edit profile</a>
+                <a class="dropdown-item" routerLink="/profile">Edit profile</a>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
         </div>
