--- a/src/app/books/book-detail/book-detail.component.html
+++ b/src/app/books/book-detail/book-detail.component.html
@@ -1,1 +1,28 @@
-<p>book-detail works!</p>
+<div class="row" *ngIf="book">
+    <div class="card col-5">
+        <img src="{{ book.coverPath }}" alt="{{ book.title }}" class="card-img-top img-thumbnail">
+    </div>
+    <div class=" card col-5">
+        <div class="card-body">
+            <h1 class="mb-5 mt-3" style="color: rgb(72, 77, 77);">{{ book.title }}</h1>
+            <strong>Author:</strong>
+            <p>{{ book.author.name }} {{ book.author.surname }}</p>
+            <strong>Genres:</strong>
+            <a *ngFor="let genre of book.genres"><br>{{ genre.name }}</a><br><br>
+            <strong>Publish date:</strong>
+            <p>{{ book.publish_date | date: 'dd-MM-yyyy'}}</p>
+            <strong>International Standard Book Number:</strong>
+            <p>{{ book.isbn }}</p>
+            <strong>Description:</strong>
+            <p>{{ book.description }}</p>
+        </div>
+        <div class="card-footer">
+            <button class="btn btn-outline-info"><i class="bi bi-bookmark-star me-2"
+                style="font-size: large; color: white;"></i>Mark to read</button>
+            <button class="btn btn-outline-info"><i class="bi bi-bookmark-heart me-2"
+                style="font-size: large; color: white;"></i>Like</button>
+            <button class="btn btn-outline-info"><i class="bi bi-bookmark-check me-2"
+                style="font-size: large; color: white;"></i>Mark as read</button>
+        </div>
+    </div>
+</div>
