Add a book functionality added

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -27,6 +27,7 @@
             </a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
                 <a class="dropdown-item" routerLink="/profile">Edit profile</a>
+                <a class="dropdown-item" routerLink="/add">Add a book</a>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
         </div>
