Added book-cover-add functionality

--- a/src/app/books/book-add-cover/book-add-cover.component.html
+++ b/src/app/books/book-add-cover/book-add-cover.component.html
@@ -30,7 +30,7 @@
                     </table>
                     <div>
                         <button type="button" class="btn btn-success btn-s"
-                            [disabled]="!uploader?.getNotUploadedItems()?.length">
+                            [disabled]="!uploader?.getNotUploadedItems()?.length" (click)="uploadCover()">
                             <span class="fa fa-upload"></span> Upload
                         </button>
                         <button type="button" class="btn btn-danger btn-s" (click)="uploader?.clearQueue()"
