--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,7 +26,7 @@
                 <i class="bi bi-person-circle" style="font-size: xx-large;"></i>
             </a>
             <div class="dropdown-menu mt-3" *dropdownMenu>
-                <a class="dropdown-item" routerLink="/profile">Edit profile</a>
+                <a class="dropdown-item" routerLink="/profile">Profile</a>
                 <a class="dropdown-item" routerLink="/add">Add a book</a>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
