--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,1 +1,16 @@
-<p *ngIf="(accountService.currentUser$ | async) as user">It's your profile {{ user.login | titlecase }}</p>
+<div class="row">
+    <div class="card col-4">
+        <table *ngIf="(accountService.currentUser$ | async) as user">
+            <tbody>
+                <tr>
+                    <td>Login</td>
+                    <td>{{ user.login }}</td>
+                </tr>
+                <tr>
+                    <td>email</td>
+                    <td></td>
+                </tr>            
+            </tbody>
+        </table>
+    </div>
+</div>
