--- a/src/app/books/book-delete/book-delete.component.html
+++ b/src/app/books/book-delete/book-delete.component.html
@@ -17,7 +17,7 @@
                         <td>{{ book?.title }}</td>
                         <td>{{ book?.authorName }} {{ book?.authorSurname }}</td>
                         <td>
-                            <button type="button" class="btn btn-danger btn-s"><i class="fa fa-trash"></i></button>
+                            <button (click)="delete(book.id)" class="btn btn-danger btn-s"><i class="fa fa-trash"></i></button>
                         </td>
                     </tr>
                 </tbody>
